Finishing the css. Waiting for a review

--- a/app/Resources/views/login/wrongPassword.html.twig
+++ b/app/Resources/views/login/wrongPassword.html.twig
@@ -1,3 +1,6 @@
 {% extends 'login/login.html.twig' %}
 
-{% block error %} <p>Password is incorrect, please try again</p> {% endblock %}
+{% block error %}
+    <p>Password is incorrect, please try again</p>
+    {{ parent() }}
+{% endblock %}
