--- a/app/Resources/views/signup/usernameTaken.html.twig
+++ b/app/Resources/views/signup/usernameTaken.html.twig
@@ -1,6 +1,6 @@
 {% extends 'signup/signup.html.twig' %}
 
 {% block error %}
-    <p>E-mail already registered, please try again</p>
+    <p>Username already taken, please try again</p>
     {{ parent() }}
 {% endblock %}
