--- a/app/Resources/views/login/login.html.twig
+++ b/app/Resources/views/login/login.html.twig
@@ -8,10 +8,8 @@
     {{ form_start(form) }}
     {{ form_widget(form) }}
     {{ form_end(form) }}
-    {% block error %}{% endblock %}
+    {% block error %}<p>Don't have an account? <a href="{{ path('signup') }}">Sign up!</a></p>{% endblock %}
 </div>
-
-<p>Don't have an account? Click <a href="{{ path('signup') }}">here</a></p>
 
 <script src="{{ asset('js/login.js') }}"></script>
 </body>
