--- a/app/Resources/views/login/usernameNotRegistered.html.twig
+++ b/app/Resources/views/login/usernameNotRegistered.html.twig
@@ -1,3 +1,6 @@
 {% extends 'login/login.html.twig' %}
 
-{% block error %} <p>Username not registered, please try again</p>{% endblock %}
+{% block error %}
+    <p>Username not registered, please try again</p>
+    {{ parent() }}
+{% endblock %}
