--- a/app/Resources/views/success/successlogin.html.twig
+++ b/app/Resources/views/success/successlogin.html.twig
@@ -1,6 +1,6 @@
 <html>
 <link href="{{ asset('css/styles.css') }}" rel="stylesheet" />
 <body>
-<h2>Hello, {{ name }}</h2>
+<h1>Hello, {{ name }}. Hope you're having a great day!</h1>
 </body>
 </html>
